# sou_eu

./: LICENSE  README.md  README.rst  pyproject.toml
sou_eu/: thatsme.py
tests/: test_sou_eu.py
